--- a/my_app/templates/forest.html
+++ b/my_app/templates/forest.html
@@ -13,7 +13,33 @@
         <td>{{ row['Location'] }},</td>
         <td>{{ row['Price'] }}</td>
     </tr>
+    <p>------------------------------------------</p>
 {% endfor %}
+<br><br>
+
+<form action="" method="post">
+    <p style="font-weight: bold">Enter Hotel name that you would like to go !!! </p>
+    <input type="text" placeholder="Enter hotel name..." name="hotel" value="{{
+          request.form.hotel }}">
+    <br><br>
+    <input type="submit" name="sub" value="Submit"/>
+</form>
+
+
+
+{% for row in hotels %}
+    <tr>
+        <h1 style="color:cornflowerblue;">FOREST HOTEL YOU PICKED </h1>
+        <td>{{ row['Hotel'] }},</td>
+        <td>{{ row['Location'] }},</td>
+        <td>{{ row['Price']}}</td>
+    </tr>
+{% endfor %}
+
+<br>
+<form method="post" action="/book">
+    <input type="submit" name="sub" value="BOOK LOCATION"/>
+</form>
 
 </body>
 </html>
