--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -19,5 +19,9 @@
         <p class="error"><strong>Error:</strong> {{ error }}
       {% endif %}
 
+<form method="post" action="/main">
+    <input type="submit" name="back" value="Go back to main Page"/>
+</form>
+
 </body>
 </html>
