--- a/my_app/templates/welcome.html
+++ b/my_app/templates/welcome.html
@@ -3,13 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+            .button{
+            background-color: hotpink;
+            color: black;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+
+}
+    .button:hover {
+        background-color: deeppink;
+    }
+    </style>
 </head>
 <body>
 
 <h1>WELCOME</h1>
-<p style="color:#e23414;">Press welcome button to start your vacation selection!</p>
+<p style="color:purple;">Press welcome button to start your vacation selection !!</p><br>
 <form method="post" action="/main">
-    <input type="submit" name="sub" value="WELCOME"/>
+    <input class="button" type="submit" name="sub" value="WELCOME"/>
 </form>
 
 </body>
