--- a/my_app/templates/admin.html
+++ b/my_app/templates/admin.html
@@ -27,7 +27,7 @@ h1 {
     <input type="submit" name="sub" value="Submit"/>
 </form>
 
-<div class="div">{{ html_file3 }}</div>>
+<div class="div">{{ html_file3 }}</div>
 
 </body>
 </html>
